Constructed the error message to show up on top of compose tweet and fixed layout issue for main container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -22,9 +22,9 @@ body {
 }
 
 .container {
-    position: absolute;
+    position: relative;
     background-color: white;
-    top: 84px;
+    top: 68px;
     left: 0;
     right: 0;
     bottom: 0;
