--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,7 @@
 #nav-bar{
     position: fixed;
-    background-color: #00a087 ;
+    background-color: #00a087;
+    top: 0;
     left: 0;
     right: 0;
     margin-left: 2em;
