--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,21 +1,21 @@
 .tweet-error{
+    position: relative;
+    top: 15px;
     background-color:#fcd380;
     border-radius: 5px;
     border: none;
     margin: 1em 2em 1em;
     display: none;
-}
-
-.show{
-    display: block;
-    border: 2px solid #a07f3e;;
+    border: 2px solid #a07f3e;
 }
 
 .new-tweet{
+    position: relative;
+    top: 15px;
     background-color:#EDEDEE;
     border-radius: 5px;
     border: 4px solid #c4bebe;
-    margin: 1em 2em 1em;
+    margin: 1em 2em 2em;
 }
 
 .new-tweet h2{
